Thu Mar 19 04:55:53 2015  Koichi Sasada  <ko1@atdot.net>

	* internal.h (IMEMO_DEBUG): added.

	* internal.h: remove unused FL_IMEMO_MARK_V[0-3].

	* gc.c (rb_imemo_new_debug): added.

	* gc.c (obj_info): show imemo type name.

Thu Mar 19 04:52:26 2015  Koichi Sasada  <ko1@atdot.net>

	* gc.c (RGENGC_OLD_NEWOBJ_CHECK): add check mechanism.

	  If RGENGC_OLD_NEWOBJ_CHECK > 0, then create old objects
	  (not new objects) periodically.

	  Create one old objects per RGENGC_OLD_NEWOBJ_CHECK objects are
	  created.

Thu Mar 19 04:46:36 2015  Koichi Sasada  <ko1@atdot.net>

	* enum.c (enum_sort_by): add WBs.

Thu Mar 19 03:37:52 2015  Koichi Sasada  <ko1@atdot.net>

	* gc.c (check_rvalue_consistency): refactoring.
	  * not inline on RGENGC_CHECK_MODE > 0.
	  * check SPECIAL_CONST_P(obj) first.
	  * add a check that remembered_bit is only TRUE when old (age == 3).

	* gc.c (RVALUE_DEMOTE): should clear RVALUE_REMEMBERED bit.

	  remembered_bit should be TRUE only for old (age == 3) objects.

	  Actually there are no effect because demoted objects will be
	  uncollectible WB unprotected objects (marked at the begginig of
	  every minor GC).

Thu Mar 19 02:52:48 2015  Koichi Sasada  <ko1@atdot.net>

	* gc.c: rename terminologies.
	  * long_lived -> uncollectible:
	    because this bitmap does not mean "long lived objects in past",
	    but means "prohibit collection thse objects until next major GC".

	    Uncollectible objects consist of two types objects, one is old
	    objects (WB protected objects which age == 3) and another is
	    uncollectible WB unprotected objects which are referred from old
	    objects

	  * remembered_wb_unprotected_objects ->
	    uncollectible_wb_unprotected_objects:
	    because uncollectible objects does not mean remembered objects.

Wed Mar 18 17:21:12 2015  Koichi Sasada  <ko1@atdot.net>

	* gc.c (gc_writebarrier_generational): add an alternative write
	  barrier (WB) implementation.